Cambios en la tablas

--- a/src/app/usuario/component/crear/crear.component.html
+++ b/src/app/usuario/component/crear/crear.component.html
@@ -3,19 +3,19 @@
     <div mat-dialog-content>
         <mat-form-field>
             <mat-label>Nombre usuario</mat-label>
-            <input matInput formControlName="nombre">
+            <input matInput formControlName="nombre_usuario">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Apellido usuario</mat-label>
-            <input matInput formControlName="apellido">
+            <input matInput formControlName="apellido_usuario">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Edad usuario</mat-label>
-            <input matInput formControlName="edad">
+            <input matInput formControlName="edad_usuario">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Sexo usuarios</mat-label>
-            <input matInput formControlName="sexo">
+            <input matInput formControlName="sexo_usuario">
         </mat-form-field>       
         <!--mat-form-field>
             <mat-label>Sexo usuarios</mat-label>              
@@ -25,11 +25,11 @@
         </mat-form-field-->
         <mat-form-field>
             <mat-label>Telefono usuario</mat-label>
-            <input matInput formControlName="telefono">
+            <input matInput formControlName="telefono_usuario">
         </mat-form-field>
         <mat-form-field>
             <mat-label>Estado civil</mat-label>
-            <input matInput formControlName="estado">
+            <input matInput formControlName="estado_civil">
         </mat-form-field>
     </div>
     <div mat-dialog-actions>
