--- a/src/app/cliente/component/cliente/cliente/cliente.component.html
+++ b/src/app/cliente/component/cliente/cliente/cliente.component.html
@@ -1,7 +1,10 @@
+<div style="margin-left: 40%; margin-top: 20px;">
+  <h1>Listado de clientes</h1>
+</div>
 <div class="container">
   <div class="container" style="margin-top: 20px;">    
     <button class="btn btn-info" style="margin-left: 10px;" (click)="showCliente()">Nuevo cliente</button>
-  </div>
+  </div> 
   <div class="mat-elevation-z8 mobile-table table-div" style="margin-bottom: 0%; margin-top: 30px;">
     <table mat-table [dataSource]="dataSource" matSort aria-describedby="clientes" class="mat-elevation-z8 table-class">
       <!--ng-container matColumnDef="id">
