--- a/src/app/usuario/component/usuario/usuario.component.html
+++ b/src/app/usuario/component/usuario/usuario.component.html
@@ -1,3 +1,6 @@
+<div style="margin-left: 40%; margin-top: 20px;">
+  <h1>Listado de usuarios</h1>
+</div>
 <div class="container">
     <div class="container" style="margin-top: 20px;">    
       <button class="btn btn-info" style="margin-left: 10px;" (click)="showCliente()">Nuevo usuario</button>
